@@ -1,3 +1,7 @@
+2010-03-16    <jmerelo@localhost.localdomain>
+
+	* lib/Don/Mendo.pm (jornadas): Just changes in documentation. NO big deal. 
+
 Revision history for Don-Mendo
 
 0.0.5  Mon Oct 20 20:00:00 2008
